Generated/CoreLangParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Definition/CoreLangParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class CoreLangParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		USE=1, OBJECT=2, ENTRY=3, FUNC=4, DECLARE=5, SET=6, GIVES=7, CHECK=8, 
		OTHERWISE=9, LOOP=10, REPEAT=11, LEN=12, ASK=13, SHOW=14, CONV_INT=15, 
		CONV_FLOAT=16, CONV_BOOL=17, AND=18, OR=19, NOT=20, TRUE=21, FALSE=22, 
		NULL=23, TYPE_I=24, TYPE_F=25, TYPE_B=26, TYPE_S=27, EQ=28, NEQ=29, GTE=30, 
		LTE=31, GT=32, LT=33, PLUS=34, MINUS=35, STAR=36, SLASH=37, PERCENT=38, 
		ASSIGN=39, LPAREN=40, RPAREN=41, LBRACE=42, RBRACE=43, LBRACK=44, RBRACK=45, 
		COMMA=46, SEMI=47, COLON=48, QMARK=49, DOT=50, INT_LIT=51, FLOAT_LIT=52, 
		STRING_LIT=53, IDENT=54, WS=55, LINE_COMMENT=56, BLOCK_COMMENT=57;
	public const int
		RULE_program = 0, RULE_topLevelItem = 1, RULE_useStmt = 2, RULE_classDef = 3, 
		RULE_classBlock = 4, RULE_classMember = 5, RULE_methodDef = 6, RULE_entryFuncDef = 7, 
		RULE_funcDef = 8, RULE_paramListOpt = 9, RULE_param = 10, RULE_typeRef = 11, 
		RULE_typeCore = 12, RULE_baseType = 13, RULE_classType = 14, RULE_arrayType = 15, 
		RULE_nullOpt = 16, RULE_block = 17, RULE_stmt = 18, RULE_stmtSemi = 19, 
		RULE_simpleStmt = 20, RULE_varDecl = 21, RULE_initOpt = 22, RULE_setStmt = 23, 
		RULE_lvalue = 24, RULE_givesStmt = 25, RULE_compoundStmt = 26, RULE_checkStmt = 27, 
		RULE_otherwiseOpt = 28, RULE_loopStmt = 29, RULE_loopInit = 30, RULE_loopAction = 31, 
		RULE_repeatStmt = 32, RULE_expr = 33, RULE_orExpr = 34, RULE_andExpr = 35, 
		RULE_eqExpr = 36, RULE_eqOp = 37, RULE_relExpr = 38, RULE_relOp = 39, 
		RULE_addExpr = 40, RULE_addOp = 41, RULE_mulExpr = 42, RULE_mulOp = 43, 
		RULE_unaryExpr = 44, RULE_primary = 45, RULE_callExpr = 46, RULE_argListOpt = 47, 
		RULE_memberAccess = 48, RULE_indexAccess = 49, RULE_lenCall = 50, RULE_askCall = 51, 
		RULE_convertCall = 52, RULE_convertName = 53, RULE_showCall = 54, RULE_arrayLit = 55, 
		RULE_elementsOpt = 56, RULE_literal = 57;
	public static readonly string[] ruleNames = {
		"program", "topLevelItem", "useStmt", "classDef", "classBlock", "classMember", 
		"methodDef", "entryFuncDef", "funcDef", "paramListOpt", "param", "typeRef", 
		"typeCore", "baseType", "classType", "arrayType", "nullOpt", "block", 
		"stmt", "stmtSemi", "simpleStmt", "varDecl", "initOpt", "setStmt", "lvalue", 
		"givesStmt", "compoundStmt", "checkStmt", "otherwiseOpt", "loopStmt", 
		"loopInit", "loopAction", "repeatStmt", "expr", "orExpr", "andExpr", "eqExpr", 
		"eqOp", "relExpr", "relOp", "addExpr", "addOp", "mulExpr", "mulOp", "unaryExpr", 
		"primary", "callExpr", "argListOpt", "memberAccess", "indexAccess", "lenCall", 
		"askCall", "convertCall", "convertName", "showCall", "arrayLit", "elementsOpt", 
		"literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'use'", "'object'", "'entry'", "'func'", "'declare'", "'set'", 
		"'gives'", "'check'", "'otherwise'", "'loop'", "'repeat'", "'len'", "'ask'", 
		"'show'", "'convertToInt'", "'convertToFloat'", "'convertToBoolean'", 
		"'and'", "'or'", "'not'", "'true'", "'false'", "'null'", "'i'", "'f'", 
		"'b'", "'s'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'='", "'('", "')'", "'{'", "'}'", "'['", "']'", 
		"','", "';'", "':'", "'?'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "USE", "OBJECT", "ENTRY", "FUNC", "DECLARE", "SET", "GIVES", "CHECK", 
		"OTHERWISE", "LOOP", "REPEAT", "LEN", "ASK", "SHOW", "CONV_INT", "CONV_FLOAT", 
		"CONV_BOOL", "AND", "OR", "NOT", "TRUE", "FALSE", "NULL", "TYPE_I", "TYPE_F", 
		"TYPE_B", "TYPE_S", "EQ", "NEQ", "GTE", "LTE", "GT", "LT", "PLUS", "MINUS", 
		"STAR", "SLASH", "PERCENT", "ASSIGN", "LPAREN", "RPAREN", "LBRACE", "RBRACE", 
		"LBRACK", "RBRACK", "COMMA", "SEMI", "COLON", "QMARK", "DOT", "INT_LIT", 
		"FLOAT_LIT", "STRING_LIT", "IDENT", "WS", "LINE_COMMENT", "BLOCK_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CoreLangParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static CoreLangParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CoreLangParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CoreLangParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(CoreLangParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TopLevelItemContext[] topLevelItem() {
			return GetRuleContexts<TopLevelItemContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TopLevelItemContext topLevelItem(int i) {
			return GetRuleContext<TopLevelItemContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreLangParserVisitor<TResult> typedVisitor = visitor as ICoreLangParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33795723278679550L) != 0)) {
				{
				{
				State = 116;
				topLevelItem();
				}
				}
				State = 121;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 122;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopLevelItemContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public UseStmtContext useStmt() {
			return GetRuleContext<UseStmtContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassDefContext classDef() {
			return GetRuleContext<ClassDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EntryFuncDefContext entryFuncDef() {
			return GetRuleContext<EntryFuncDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncDefContext funcDef() {
			return GetRuleContext<FuncDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtSemiContext stmtSemi() {
			return GetRuleContext<StmtSemiContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CompoundStmtContext compoundStmt() {
			return GetRuleContext<CompoundStmtContext>(0);
		}
		public TopLevelItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_topLevelItem; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.EnterTopLevelItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.ExitTopLevelItem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreLangParserVisitor<TResult> typedVisitor = visitor as ICoreLangParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTopLevelItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopLevelItemContext topLevelItem() {
		TopLevelItemContext _localctx = new TopLevelItemContext(Context, State);
		EnterRule(_localctx, 2, RULE_topLevelItem);
		try {
			State = 130;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case USE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 124;
				useStmt();
				}
				break;
			case OBJECT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 125;
				classDef();
				}
				break;
			case ENTRY:
				EnterOuterAlt(_localctx, 3);
				{
				State = 126;
				entryFuncDef();
				}
				break;
			case FUNC:
				EnterOuterAlt(_localctx, 4);
				{
				State = 127;
				funcDef();
				}
				break;
			case DECLARE:
			case SET:
			case GIVES:
			case LEN:
			case ASK:
			case SHOW:
			case CONV_INT:
			case CONV_FLOAT:
			case CONV_BOOL:
			case NOT:
			case TRUE:
			case FALSE:
			case NULL:
			case MINUS:
			case LPAREN:
			case LBRACK:
			case INT_LIT:
			case FLOAT_LIT:
			case STRING_LIT:
			case IDENT:
				EnterOuterAlt(_localctx, 5);
				{
				State = 128;
				stmtSemi();
				}
				break;
			case CHECK:
			case LOOP:
			case REPEAT:
				EnterOuterAlt(_localctx, 6);
				{
				State = 129;
				compoundStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UseStmtContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode USE() { return GetToken(CoreLangParser.USE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(CoreLangParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(CoreLangParser.SEMI, 0); }
		public UseStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_useStmt; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.EnterUseStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.ExitUseStmt(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreLangParserVisitor<TResult> typedVisitor = visitor as ICoreLangParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUseStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UseStmtContext useStmt() {
		UseStmtContext _localctx = new UseStmtContext(Context, State);
		EnterRule(_localctx, 4, RULE_useStmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 132;
			Match(USE);
			State = 133;
			Match(IDENT);
			State = 134;
			Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OBJECT() { return GetToken(CoreLangParser.OBJECT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(CoreLangParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ClassBlockContext classBlock() {
			return GetRuleContext<ClassBlockContext>(0);
		}
		public ClassDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.EnterClassDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.ExitClassDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreLangParserVisitor<TResult> typedVisitor = visitor as ICoreLangParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefContext classDef() {
		ClassDefContext _localctx = new ClassDefContext(Context, State);
		EnterRule(_localctx, 6, RULE_classDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			Match(OBJECT);
			State = 137;
			Match(IDENT);
			State = 138;
			classBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassBlockContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LBRACE() { return GetToken(CoreLangParser.LBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RBRACE() { return GetToken(CoreLangParser.RBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ClassMemberContext[] classMember() {
			return GetRuleContexts<ClassMemberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ClassMemberContext classMember(int i) {
			return GetRuleContext<ClassMemberContext>(i);
		}
		public ClassBlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classBlock; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.EnterClassBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.ExitClassBlock(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreLangParserVisitor<TResult> typedVisitor = visitor as ICoreLangParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassBlockContext classBlock() {
		ClassBlockContext _localctx = new ClassBlockContext(Context, State);
		EnterRule(_localctx, 8, RULE_classBlock);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140;
			Match(LBRACE);
			State = 144;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 33795723278679536L) != 0)) {
				{
				{
				State = 141;
				classMember();
				}
				}
				State = 146;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 147;
			Match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassMemberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VarDeclContext varDecl() {
			return GetRuleContext<VarDeclContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SEMI() { return GetToken(CoreLangParser.SEMI, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MethodDefContext methodDef() {
			return GetRuleContext<MethodDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StmtSemiContext stmtSemi() {
			return GetRuleContext<StmtSemiContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CompoundStmtContext compoundStmt() {
			return GetRuleContext<CompoundStmtContext>(0);
		}
		public ClassMemberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classMember; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.EnterClassMember(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.ExitClassMember(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreLangParserVisitor<TResult> typedVisitor = visitor as ICoreLangParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassMember(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassMemberContext classMember() {
		ClassMemberContext _localctx = new ClassMemberContext(Context, State);
		EnterRule(_localctx, 10, RULE_classMember);
		try {
			State = 155;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 149;
				varDecl();
				State = 150;
				Match(SEMI);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 152;
				methodDef();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 153;
				stmtSemi();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 154;
				compoundStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MethodDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FUNC() { return GetToken(CoreLangParser.FUNC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(CoreLangParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(CoreLangParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamListOptContext paramListOpt() {
			return GetRuleContext<ParamListOptContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(CoreLangParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(CoreLangParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeRefContext typeRef() {
			return GetRuleContext<TypeRefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public MethodDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_methodDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.EnterMethodDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.ExitMethodDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreLangParserVisitor<TResult> typedVisitor = visitor as ICoreLangParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMethodDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MethodDefContext methodDef() {
		MethodDefContext _localctx = new MethodDefContext(Context, State);
		EnterRule(_localctx, 12, RULE_methodDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 157;
			Match(FUNC);
			State = 158;
			Match(IDENT);
			State = 159;
			Match(LPAREN);
			State = 160;
			paramListOpt();
			State = 161;
			Match(RPAREN);
			State = 162;
			Match(COLON);
			State = 163;
			typeRef();
			State = 164;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntryFuncDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ENTRY() { return GetToken(CoreLangParser.ENTRY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FUNC() { return GetToken(CoreLangParser.FUNC, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENT() { return GetToken(CoreLangParser.IDENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN() { return GetToken(CoreLangParser.LPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamListOptContext paramListOpt() {
			return GetRuleContext<ParamListOptContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN() { return GetToken(CoreLangParser.RPAREN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(CoreLangParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeRefContext typeRef() {
			return GetRuleContext<TypeRefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public EntryFuncDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entryFuncDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.EnterEntryFuncDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ICoreLangParserListener typedListener = listener as ICoreLangParserListener;
			if (typedListener != null) typedListener.ExitEntryFuncDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICoreLangParserVisitor<TResult> typedVisitor = visitor as ICoreLangParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntryFuncDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntryFuncDefContext entryFuncDef() {
		EntryFuncDefContext _localctx = new EntryFuncDefContext(Context, State);
		EnterRule(_localctx, 14, RULE_entryFuncDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 166;
			Match(ENTRY);
			State = 167;
			Match(FUNC);
			State = 168;
			Match(IDENT);
			State = 169;
			Match(LPAREN);
			State = 170;
			paramListOpt();
			State = 171;
			Match(RPAREN);
			State = 172;
			Match(COLON);
			State = 173;
			typeRef();
			State = 174;
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
